<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    tools:context=".TravelActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6883BD"
        android:text="@string/TravelHistory"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:padding="5dp"/>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#9ACDF6"
        android:layout_marginTop="3dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UTAR"
        android:drawableLeft="@drawable/ic_baseline_store_mall_directory_24"
        android:drawablePadding="10dp"
        android:background="@drawable/textview_border"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seveneleven"
        android:drawableLeft="@drawable/ic_baseline_store_mall_directory_24"
        android:drawablePadding="10dp"
        android:background="@drawable/textview_border"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mahamaju"
        android:drawableLeft="@drawable/ic_baseline_store_mall_directory_24"
        android:drawablePadding="10dp"
        android:background="@drawable/textview_border"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"/>

</LinearLayout>

