<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9E8F6"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#6883BD"
                android:padding="10dp"
                android:text="User Profile"
                android:typeface="serif"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_username"
                    android:textAlignment="gravity"
                    android:inputType="textPersonName"
                    android:gravity="end"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="MySelamat ID:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="none"
                    android:textAlignment="gravity"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IC/Passport No.:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_ic"
                    android:textAlignment="gravity"
                    android:inputType="number"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Address Line 1:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_addressLine1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_addressLine1"
                    android:inputType="textPersonName"
                    android:textAlignment="gravity"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv40"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Address Line 2:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_addressLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_addressLine2"
                    android:textAlignment="gravity"
                    android:inputType="textPersonName"
                    android:gravity="end"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="State:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_state"
                    android:textAlignment="gravity"
                    android:inputType="textPersonName"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv43"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Postal Code:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_postalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_postalCode"
                    android:textAlignment="gravity"
                    android:inputType="number"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Health Status:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_healthStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="none"
                    android:textAlignment="gravity"
                    android:gravity="end"
                    android:textSize="16dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_updateProfile"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#6883BD"
                android:padding="8dp"
                android:textSize="16dp"
                android:text="update profile" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#6883BD"
                android:padding="8dp"
                android:text="sign out"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>